--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>CricketScience</title>
+  <title>StatsCricket</title>
 
 
   <!-- bootstrap core css -->
@@ -39,7 +39,7 @@
         <nav class="navbar navbar-expand-lg custom_nav-container ">
           <a class="navbar-brand" href="index.html">
             <span>
-              CricketScience
+              StatsCricket
             </span>
           </a>
 
@@ -866,7 +866,7 @@
     <div class="container">
       <p>
         © <span id="displayYear">2023</span> All Rights Reserved By
-        <a href="https://html.design/">CricketScience</a>
+        <a href="https://html.design/">StatsCricket</a>
       </p>
     </div>
   </footer>
