--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html><head>
+-<html><head>
   <!-- Basic -->
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -51,6 +51,7 @@
             <ul class="navbar-nav  ml-auto">
               <li class="nav-item active">
                 <a class="nav-link" href="index.html">Home</a>
+             <!--
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="batters.html"> Batters</a>
@@ -61,6 +62,7 @@
               <li class="nav-item">
                 <a class="nav-link" href="bowlers.html">Bowlers</a>
               </li>
+                -->
               <!--
               <li class="nav-item">
                 <a class="nav-link" href="#">
